--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
   <title>Frontend Mentor | QR code component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 </head>
+  
 <body>
 <div class="container">
   <div class="image">
-  <img src="images/image-qr-code.png" alt="Qr code component">
+  <img src="image-qr-code.png" alt="Qr code component">
   </div>
   <div class="text-container">
     <h2 class="heading">Improve your front-end skills by building projects</h2>
